Exercise with the google api maps, stuck with a bug trying to get the markers. basics are done

--- a/public/css/google_api.css
+++ b/public/css/google_api.css
@@ -1,4 +1,13 @@
+#buttonsZ{
+	width: 55px;
+	height: 45px;
+}
+
 #map-canvas {
     width: 700px;
     height: 481px;
+}
+
+#container{
+	position: absolute;
 }
